# cpp-minigames

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
games/2048/: CMakeLists.txt  README.md
games/2048/src/: board.cpp  board.h  main.cpp  renderer.cpp  renderer.h
games/2048/tests/: BoardTest.cpp
games/chess/: CMakeLists.txt  README.md
games/chess/src/: board.cpp  board.h  main.cpp  renderer.cpp  renderer.h
games/chess/tests/: BoardTest.cpp
games/go/: CMakeLists.txt  README.md
games/go/src/: board.cpp  board.h  main.cpp  renderer.cpp  renderer.h
games/go/tests/: BoardTest.cpp
games/minesweeper/: CMakeLists.txt  README.md
games/minesweeper/src/: board.cpp  board.h  main.cpp  renderer.cpp  renderer.h
games/minesweeper/tests/: BoardTest.cpp
games/snake/: CMakeLists.txt  README.md
games/snake/src/: game.cpp  game.h  main.cpp  renderer.cpp  renderer.h
games/snake/tests/: GameTest.cpp
games/sokoban/: CMakeLists.txt  README.md
games/sokoban/src/: level.cpp  level.h  main.cpp  renderer.cpp  renderer.h
games/sokoban/tests/: LevelTest.cpp
games/tetris/: CMakeLists.txt  LICENSE  README.md
games/tetris/.github/workflows/: ci.yml
games/tetris/src/: collision.cpp  piece.cpp
games/tetris/tests/: CollisionTest.cpp  GameTest.cpp
libraries/chess-engine/: CMakeLists.txt  README.md
libraries/chess-engine/include/: chess_engine.h
libraries/chess-engine/tests/: test.cpp
libraries/go-engine/: CMakeLists.txt  README.md
libraries/go-engine/include/: go_engine.h
libraries/go-engine/tests/: test.cpp
src/: board.cpp  board.h  collision.cpp  collision.h  game.cpp  game.h  main.cpp  piece.cpp  piece.h  renderer.cpp  renderer.h
tests/: BoardTest.cpp
